--- a/packages/abc/theme-compact.less
+++ b/packages/abc/theme-compact.less
@@ -8,3 +8,8 @@
 @footer-toolbar-padding: 0 16px;
 
 @reuse-tab-height: 44px;
+
+// tag-select
+// --
+@tag-select-margin: 8px;
+@tag-select-item-margin-right: 12px;
